--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Steve Stratton
 description: IT Wizard
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/cptnstratton/cptnstratton.github.io/images/snake.png
+avatar: https://github.com/cptnstratton/cptnstratton.github.io/images/snake.png
 
 #
 # Flags below are optional
@@ -28,8 +28,8 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: cptnstratton
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  youtube: user/cptnstratton# channel/<your_long_string> or user/<user-name>
+  googleplus: cptnstratton# anything in your profile username that comes after plus.google.com/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://strattonsoftware.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
