--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Steve Stratton
 description: IT Wizard
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/cptnstratton/cptnstratton.github.io/images/snake.png
+avatar: https://cptnstratton.github.io/images/snake.png
 
 #
 # Flags below are optional
