--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Steve Stratton
 
 # Short bio or description (displayed in the header)
-description: IT Wizard
+description: Wizard of IT
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://cptnstratton.github.io/images/snake.png
+avatar: https://github.com/cptnstratton/cptnstratton.github.io/images/snake.png
 
 #
 # Flags below are optional
