--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Steve Stratton
+name: Stratton Software
 
 # Short bio or description (displayed in the header)
-description: Wizard of IT
+description: Steve Stratton - Wizard of IT
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/cptnstratton/cptnstratton.github.io/master/images/jekyll-logo.png
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/cptnstratton/cptnstratton.github.io/ma
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: mailto:steve@strattonsoftware.com
   facebook:
   flickr:
   github: cptnstratton
