--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/cptnstratton/cptnstratton.github.io/ma
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: mailto:steve@strattonsoftware.com
+  email: steve@strattonsoftware.com
   facebook:
   flickr:
   github: cptnstratton
