--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ footer-links:
   facebook:
   flickr:
   github: cptnstratton
-  instagram:
+  instagram: cptnstratton
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: cptnstratton
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: user/cptnstratton# channel/<your_long_string> or user/<user-name>
   googleplus: cptnstratton# anything in your profile username that comes after plus.google.com/
